[package]
name = "udp-tool"
version = "0.1.0"
authors = ["Zhuyb <smile921@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = 'udp-server'
path = 'src/udp-server.rs'
[[bin]]
name = 'udp-client'
path = 'src/udp-client.rs'
[[bin]]
name = 'main'
path = 'src/main.rs'

[dependencies]
clap = { version="2.33.3", features=["yaml"]}
walkdir = "2"
getopts = "0.2"
rustyline = "8.2.0"
socket2 = "0.3.8"
libc = "0.2.98"