[package]
name = "udp-tool"
version = "0.1.0"
authors = ["Zhuyb <smile921@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#https://cdn.jsdelivr.net/gh/521xueweihan/GitHub520@main/hosts

[[bin]]
name = 'udp-server'
path = 'src/udp-server.rs'
[[bin]]
name = 'udp-client'
path = 'src/udp-client.rs'
[[bin]]
name = 'main'
path = 'src/main.rs'

[[bin]]
name = 'static-server'
path = 'src/static-server.rs'

[dependencies]
clap = { version="2.33.3", features=["yaml"]}
walkdir = "2"
getopts = "0.2"
rustyline = "8.2.0"
socket2 = "0.3.8"
libc = "0.2.98"

actix-web = { version = "3.0.1", features = ["rustls"] }
actix-rt = "1.1.1"
actix-cors = "0.3.0"
actix-files = "0.3.0"
postgres = "0.17.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
tokio-postgres = "0.5.5"
tokio = "0.2.22"
env_logger = "0.7.1"
rustls = "0.18"
 # rustls 
 # rust-tls = ["rustls", "actix-server/rust-tls"] 